feat: bộ lọc sản phẩm